sylt-old/progs/tests/dict/mismatch_types.sy
start :: fn {
    a: {int: str|int} = {1: 1, 2:"abc", 1.0:1}
    a
}

// error: #TypeMismatch(_, _)
